--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="bg-primary-200">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="bg-primary-100 flex relative sm:mx-10 lg:mx-20 sm:mt-8 md:mt-12 rounded-t-lg justify-center"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
